# lgup-m365-mcp

./: .gitignore  APP_AUTH.md  APP_DEPLOY.md  README.md  architecture-notes.txt  azure-mcp-architecture-guide.html  bicepconfig.json  deploy-app.sh  deploy-bicep.sh  destroy-bicep.sh  main.bicep  main.dev.bicepparam  main.dev.bicepparam.example  verify-bicep.sh
app/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
app-py/: README.md  pyproject.toml
app-py/src/hanik_mcp/: __init__.py  main.py
app-py/src/hanik_mcp/drm/: routes.py
app-py/src/hanik_mcp/mcp_server/: server.py
app-py/src/hanik_mcp/presentation/: __init__.py  ui_routes.py
app-py/src/hanik_mcp/shared/: __init__.py  server_info.py
app/src/: index.ts  main.py
app/src/drm/: DrmCredentials.ts  DrmDecryptionClient.ts  DrmSignature.ts  __init__.py  cli.py  credentials.py  decryption_client.py  drmRoutes.ts  routes.py  signature.py
app/src/identity/: AccessToken.ts  CallerIdentity.ts  __init__.py  access_token.py  auth_middleware.py  caller_identity.py  entra_token_validator.py  scopeGuard.ts  scope_guard.py
app/src/mcp/: mcpRoutes.ts  mcpServer.ts
app/src/mcp_server/: __init__.py  server.py
app/src/oauth/: __init__.py  metadata_routes.py  oauthMetadataRoutes.ts
app/src/preprocess/: __init__.py  __main__.py  cli.py  core.py  service.py
app/src/presentation/: authTestUiPage.ts  drmTestUiPage.ts  uiRoutes.ts
app/src/shared/: entraSettings.ts  entra_settings.py  serverInfo.ts  server_info.py
app/src/storage/: __init__.py  blob_client.py  routes.py  settings.py
app/src/test_ui/: __init__.py  ui_routes.py
app/src/test_ui/templates/: auth_test_ui.html  drm_test_ui.html
app/tests/: auth_test_support.py  conftest.py  test_auth_middleware.py  test_decrypt_cli.py  test_entra_login_e2e.py  test_entra_token_validator.py  test_mcp_tools.py  test_preprocess_cli.py  test_storage.py
app/tests/fixtures/: sample_bid_plan_3pages.hwpx
auth/: PLAN.md
(+20 files in other folders)
