[project]
name = "hanik-mcp-server"
version = "1.1.0"
description = "MCP server (Python) with Entra login + DRM decrypt test UIs, modeled with DDD bounded contexts."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.28.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
]

[project.scripts]
hanik-mcp = "hanik_mcp.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hanik_mcp"]
